After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712276 - New 'Bearers' and 'Messages' properties, instead of List() methods
New 'Bearers' and 'Messages' properties, instead of List() methods
Status: RESOLVED FIXED
Product: NetworkManager
Classification: Platform
Component: ModemManager
git master
Other Linux
: Normal normal
: ---
Assigned To: NetworkManager maintainer(s)
NetworkManager maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-11-14 07:50 UTC by Aleksander Morgado
Modified: 2013-11-21 10:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch. (9.34 KB, patch)
2013-11-15 18:07 UTC, Aleksander Morgado
committed Details | Review
Patch to add the 'Messages' property in the Messaging interface (5.85 KB, patch)
2013-11-15 18:38 UTC, Aleksander Morgado
committed Details | Review

Description Aleksander Morgado 2013-11-14 07:50:31 UTC
In addition to ListBearers(), we should have a 'Bearers' property (signature 'ao') where we provide the list of available bearers, so that clients can watch updates on this property to get notified when bearers are created/destroyed.
Comment 1 Aleksander Morgado 2013-11-15 18:07:30 UTC
Created attachment 259932 [details] [review]
Patch.
Comment 2 Aleksander Morgado 2013-11-15 18:37:30 UTC
Same for the Messaging interface, where we could have a 'Messages' property instead (in addition to) the List() method.
Comment 3 Aleksander Morgado 2013-11-15 18:38:10 UTC
Created attachment 259936 [details] [review]
Patch to add the 'Messages' property in the Messaging interface
Comment 4 Aleksander Morgado 2013-11-21 10:38:06 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.