introspection,api: new 'Bearers' property in the Modem interface

https://bugzilla.gnome.org/show_bug.cgi?id=712276